# python-template

./: .editorconfig  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
