[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = ""}]

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"

[tool.poetry.dependencies]
python = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
